snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
748f3d55c71c844bec9bfbd7d66333571c89b88ec67dc9b9f40dd274629d1007e663e32ded6f3cc03b237ba4819d2036046a01e63c0515a051835d255b729257